[gd_scene load_steps=7 format=2]

[ext_resource path="res://Grafiken/NPC_HM.png" type="Texture" id=1]
[ext_resource path="res://Skripte/NPC_HM.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29.4375, 73 )

[sub_resource type="Animation" id=2]
resource_name = "Dialog"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect/Label:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Neue Animation"

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect/Label:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[node name="NPC_HM" type="Area2D" groups=[
"NPCs",
]]
position = Vector2( 475, 459 )
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="NPC_HM" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -179.0
margin_top = -279.0
margin_right = 167.0
margin_bottom = -99.0

[node name="Label" type="Label" parent="ColorRect"]
margin_right = 348.0
margin_bottom = 181.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Willkommen am Eichendorff-Gymnasium!
Ab 7:40 darfst du das Geb√§ude betreten, los gehts!"
autowrap = true

[node name="Label2" type="Label" parent="ColorRect"]
margin_left = 154.0
margin_top = 157.0
margin_right = 201.0
margin_bottom = 171.0
mouse_filter = 1
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "OK"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Dialog = SubResource( 2 )
"anims/Neue Animation" = SubResource( 3 )
anims/RESET = SubResource( 4 )
[connection signal="input_event" from="." to="." method="_on_NPC_HM_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_NPC_HM_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_NPC_HM_mouse_exited"]
[connection signal="gui_input" from="ColorRect/Label2" to="." method="_on_Label2_gui_input"]
